# ArtificialOS

./: .editorconfig  .gitignore  CHECKLIST.md  CREATIVE_EFFECTS_ENHANCEMENT.md  CVA_VERIFICATION.md  IOURING_INTEGRATION.md  IOURING_SUMMARY.md  LLM_UI_GENERATION.md  Makefile  PERFORMANCE_MONITORING.md  PHASE1_COMPLETE.md  REACT_HOOK_FORM_SETUP.md  README.md  REFACTORING_STATUS.md  REFACTORING_SUMMARY.md  RESOURCE_CLEANUP_SOLUTION.md  SIMD_INTEGRATION.md  TANSTACK_QUERY_INTEGRATION.md  concepts.md  plan.md  start-ai-service.sh  start-ui.sh  test_blueprint.py
kernel/: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  build.rs  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml  update_ahash.sh
kernel/.cargo/: config.toml
kernel/benches/: bincode_benchmark.rs  json_benchmark.rs  sync_benchmark.rs  timeout_benchmark.rs
kernel/docs/: JSON_OPTIMIZATION.md
kernel/src/: errors.rs  grpc_server.rs  ipc.rs  lib.rs  limits.rs  main.rs  memory.rs  process.rs  sandbox.rs  syscall.rs
kernel/src/api/: async_task.rs  batch.rs  grpc_server.rs  metrics.rs  mod.rs  traits.rs  types.rs
kernel/src/api/conversions/: mod.rs  proto.rs  response.rs
kernel/src/api/execution/: async_task.rs  batch.rs  mod.rs  streaming.rs
kernel/src/api/handlers/: async_handlers.rs  mod.rs  process_handlers.rs  sandbox_handlers.rs  scheduler_handlers.rs  streaming_handlers.rs
kernel/src/api/server/: grpc_server.rs  metrics.rs  mod.rs
kernel/src/core/: bincode.rs  const_generics.rs  errors.rs  hints.rs  id.rs  json.rs  limits.rs  mod.rs  serde.rs  shard_manager.rs  simd.rs  traits.rs  types.rs
kernel/src/core/clipboard/: manager.rs  mod.rs  types.rs
kernel/src/core/data_structures/: const_generics.rs  epoch_fd.rs  inline_string.rs  mod.rs
kernel/src/core/guard/: README.md  VALIDATION.md  async_task.rs  composite.rs  fd.rs  ipc.rs  lock.rs  memory.rs  mod.rs  observe.rs  syscall.rs  timeout.rs  traits.rs  transaction.rs  typed.rs
kernel/src/core/memory/: arena.rs  cow_memory.rs  mod.rs  pool.rs
kernel/src/core/optimization/: hints.rs  likely.rs  mod.rs  prefetch.rs  simd_search.rs
kernel/src/core/serialization/: bincode.rs  json.rs  mod.rs  serde.rs
kernel/src/core/simd/: calc.rs  find.rs  mod.rs  platform.rs  text.rs
kernel/src/ipc/: lockfree_ring.rs  manager.rs  mmap.rs  mod.rs  pipe.rs  queue.rs  shm.rs  timeout.rs  traits.rs  types.rs
kernel/src/memory/: README.md  gc.rs  manager.rs  mod.rs  traits.rs  types.rs
kernel/src/monitoring/: README.md  anomaly.rs  bridge.rs  collector.rs  events.rs  metrics.rs  mod.rs  query.rs  sampler.rs  stream.rs  timeout.rs  tracer.rs
kernel/src/permissions/: README.md  audit.rs  cache.rs  context.rs  manager.rs  mod.rs  policy.rs  traits.rs  types.rs
kernel/src/process/: README.md  atomic_stats.rs  budget.rs  cleanup.rs  executor.rs  lifecycle.rs  manager.rs  manager_builder.rs  manager_scheduler.rs  mod.rs  preemption.rs  priority.rs  scheduler.rs  scheduler_task.rs  traits.rs  types.rs  validation.rs
kernel/src/scheduler/: mod.rs  traits.rs  types.rs
kernel/src/security/: limits.rs  mod.rs  sandbox.rs  traits.rs  types.rs
kernel/src/signals/: README.md  atomic_stats.rs  callbacks.rs  delivery.rs  handler.rs  integration.rs  internal_types.rs  manager.rs  mod.rs  traits.rs  types.rs
kernel/src/syscalls/: README.md  executor.rs  fd.rs  fs.rs  handle.rs  handler.rs  ipc.rs  memory.rs  mmap.rs  mod.rs  network.rs  process.rs  scheduler.rs  signal.rs  signals.rs  system.rs  time.rs  timeout_config.rs  timeout_executor.rs  traits.rs  types.rs  types_ext.rs  vfs_adapter.rs
kernel/src/vfs/: init.rs  local.rs  memory.rs  mod.rs  mount.rs  observable.rs  observable_wrapper.rs  paths.rs  traits.rs  types.rs
kernel/tests/: README.md  address_recycling_test.rs  async_task_test.rs  batch_test.rs  clipboard.rs  dashmap_stress_test.rs  executor_test.rs  grpc.rs  grpc_advanced_test.rs  integration.rs  integration_process_test.rs  integration_tests.rs  iouring.rs  iouring_syscall_test.rs  ipc.rs  ipc_test.rs  jit_test.rs  limits_test.rs  memory.rs  namespace_test.rs  observability.rs  performance.rs  pipe_test.rs  process.rs  process_test.rs  queue_test.rs  sandbox_test.rs  scheduler.rs  scheduler_test.rs  security.rs  shm_test.rs  signals.rs  signals_test.rs  simd_test.rs  streaming_test.rs  sync_primitives.rs  syscall_test.rs  syscalls.rs  syscalls_integration_test.rs  vfs.rs  (+1 more)
kernel/tests/clipboard/: manager.rs  mod.rs
kernel/tests/grpc/: grpc_advanced_test.rs
kernel/tests/guard/: composite_guard_tests.rs  integration_tests.rs  ipc_guard_tests.rs  lock_guard_tests.rs  memory_guard_tests.rs  mod.rs  observable_guard_tests.rs  transaction_guard_tests.rs  typed_guard_tests.rs
kernel/tests/integration/: integration_process_test.rs  integration_tests.rs
kernel/tests/iouring/: iouring_ops_test.rs  iouring_syscall_test.rs  zerocopy_test.rs
kernel/tests/ipc/: ipc_id_recycling_test.rs  ipc_test.rs  pipe_test.rs  queue_test.rs  shm_test.rs  unit_ipc_test.rs  zerocopy_cleanup_test.rs
kernel/tests/memory/: address_recycling_test.rs  memory_test.rs  unit_memory_test.rs
kernel/tests/monitoring/: collector_test.rs  events_test.rs  integration_test.rs  mod.rs  query_test.rs
kernel/tests/performance/: dashmap_stress_test.rs  jit_test.rs  simd_test.rs
kernel/tests/process/: executor_test.rs  process_test.rs  resource_cleanup_test.rs
kernel/tests/scheduler/: scheduler_test.rs
kernel/tests/security/: ebpf_events_test.rs  ebpf_filters_test.rs  ebpf_loader_test.rs  ebpf_providers_test.rs  ebpf_test.rs  limits_test.rs  namespace_test.rs  permissions_test.rs  sandbox_test.rs
kernel/tests/signals/: signals_test.rs
kernel/tests/syscalls/: async_syscall_test.rs  async_task_test.rs  batch_test.rs  fd_limits_test.rs  search_test.rs  socket_cleanup_test.rs  streaming_test.rs  syscall_test.rs  syscalls_integration_test.rs  unit_syscall_test.rs
kernel/tests/unit/: ebpf_test.rs  ipc_test.rs  memory_test.rs  syscall_test.rs
kernel/tests/vfs/: memfs_test.rs  vfs_fd_integration_test.rs  vfs_test.rs
(+1442 files in other folders)
