[package]
name = "ai-os-kernel"
version = "0.1.0"
edition = "2021"

[lib]
name = "ai_os_kernel"
path = "src/lib.rs"

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"

# gRPC
tonic = "0.11"
prost = "0.12"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrency
parking_lot = "0.12"
dashmap = "5.5"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio-test = "0.4"
# Better assertions with colored diffs
pretty_assertions = "1.4"
# Property-based testing
proptest = "1.4"
# Mocking framework
mockall = "0.12"
# Temporary file/directory creation for tests
tempfile = "3.8"
# Serial test execution for tests that can't run in parallel
serial_test = "3.0"
# Async test utilities
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
